--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -56,8 +56,11 @@ img {
   /* typography */
   --base-font-stack: "Open Sans", sans-serif;
   --font-size: 17px;
+  --font-color: rgba(0, 0, 0, 0.825);
   /* spacing */
   --gutter: 10px;
+  /* breakpoints */
+  --content-wide: 1200px;
   /* material shadows */
   --shadow-1: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   --shadow-2: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -78,7 +81,7 @@ html {
 
 body {
   font-family: var(--base-font-stack);
-  color: rgba(0, 0, 0, 0.825);
+  color: var(--font-color);
   background-color: var(--background-color);
   font-size: var(--font-size);
 }
@@ -107,9 +110,11 @@ h3,
 h4,
 h5,
 h6 {
+  font-family: "Roboto Slab", serif;
 }
 
 h1 {
+  font-weight: 900;
 }
 
 h2 {
@@ -139,6 +144,23 @@ td {
 
 #map {
   width: 100%;
+}
+
+main {
+  max-width: var(--content-wide);
+  margin: 0 auto;
+}
+
+footer {
+  margin-top: 3em;
+  background-color: white;
+  border-top: 1px solid gainsboro;
+}
+
+.footer-inner {
+  max-width: var(--content-wide);
+  margin: 2em auto 0 auto;
+  font-size: 0.9em;
 }
 
 /* end base styles */
@@ -177,7 +199,7 @@ header#nav-narrow nav a.active:hover {
 }
 
 /* hide on larger screens */
-@media screen and (min-width: 1640px) {
+@media screen and (min-width: 640px) {
   header#nav-narrow {
     display: none;
   }
@@ -193,7 +215,6 @@ header#nav-narrow nav a.active:hover {
 }
 
 .school-logo-link {
-  /* background-color: var(--brand-color); */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -271,7 +292,7 @@ header#nav-wide {
 }
 
 header#nav-wide nav {
-  max-width: 960px;
+  max-width: var(--content-wide);
   height: 3em;
   margin-left: auto;
   margin-right: auto;
@@ -282,7 +303,7 @@ header#nav-wide nav {
 }
 
 /* only show on larger screens */
-@media screen and (min-width: 1640px) {
+@media screen and (min-width: 640px) {
   header#nav-wide {
     display: block;
   }
@@ -300,17 +321,13 @@ header#nav-wide nav {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-@media screen and (min-width: 960px) {
-  #home-page-banner {
-    /* transform: translateX(calc((960px - 100vw) / 2));
-    min-height: 40vmin; */
-  }
-}
-
-#title-container {
-  max-width: 960px;
+.title-inner {
+  max-width: var(--content-wide);
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -319,19 +336,55 @@ header#nav-wide nav {
   min-height: 40vmin;
 }
 
-#title-container h1 {
+.title-inner h1 {
+  font-weight: 700;
   background-color: rgba(0, 0, 0, 0.3);
-  border-radius: 0 0 1em 0;
+  /* margin: 2em auto 0 auto; */
   padding: 0.5em 0.8em 0.5em 0.4em;
-  border: none;
   color: white;
-  /* width: 400px;
-  height: 400px;
+  border: none;
+  border-radius: 0 0 1em 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .title-inner h1 {
+    font-size: calc(4vmin + 14px);
+  }
+  #home-page-banner {
+    min-height: 500px;
+  }
+}
+
+.header-links {
+  /* background-color: rgba(255, 255, 255, 0.3); */
+  background-color: rgba(0, 0, 0, 0.3);
+  margin-top: 2em;
+}
+.header-links-inner {
+  margin: 0 auto;
+  max-width: var(--content-wide);
+  padding: var(--gutter);
   display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  text-align: center; */
+  flex-direction: row;
+  justify-content: flex-end;
+}
+.header-links a {
+  margin-left: var(--gutter);
+  margin-right: var(--gutter);
+}
+
+.header-links a:first-child {
+  margin-left: 0;
+}
+
+.header-links a:last-child {
+  margin-right: 0;
+}
+
+.header-links a,
+.header-links a img {
+  height: 40px;
+  width: auto;
 }
 
 /* link buttons and people pictures */
@@ -389,10 +442,6 @@ header#nav-wide nav {
 }
 
 /* table of contents */
-main {
-  position: relative;
-}
-
 .table-of-contents {
   position: relative;
   width: 250px;
@@ -400,17 +449,30 @@ main {
   text-align: left;
 }
 
+.table-of-contents h4 {
+  font-weight: 700;
+}
+
 .table-of-contents ul li {
   margin-bottom: 0.2em;
 }
 
-@media screen and (min-width: 1640px) {
+@media screen and (min-width: 640px) {
   .table-of-contents {
-    position: absolute;
+    width: 100%;
+  }
+  .table-of-contents ul {
+    padding: 0;
+  }
+  .table-of-contents li {
+    display: inline;
+    padding-right: 2em;
+    line-height: 2em;
+    /* position: absolute;
     text-align: right;
     padding: 10px;
     right: 0;
-    top: 122px;
+    top: 122px; */
   }
 }
 
@@ -485,4 +547,11 @@ main {
   .values-grid img {
     max-width: 200px;
   }
+}
+
+.twitter-container {
+  margin: 3em auto 1em;
+  border-top: 1px solid var(--brand-color);
+  border-top: 1px solid var(--brand-color);
+  max-width: 480px;
 }
