layout of homepage, moved twitter feed to grid

--- a/src/_includes/homepage.njk
+++ b/src/_includes/homepage.njk
@@ -13,11 +13,21 @@
         </div>
       </div>
     </div>
-  <main>
-    {{content | safe}}
-  </main>
+  <main class="homepage-content">
+    <div class="homepage-main">
+      {{content | safe}}
+    </div>
     <div class="twitter-container">
       <a class="twitter-timeline" data-chrome="transparent nofooter" data-border-color="#008000" data-link-color="#008000" href="https://twitter.com/decoypri" data-height="480">Tweets by @DecoyPri</a>
       <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
+    <div class="footer-logos">
+      <div>Logo</div>
+      <div>Logo</div>
+      <div>Logo</div>
+      <div>Logo</div>
+      <div>Logo</div>
+      <div>Logo</div>
+    </div>
+  </main>
 {% endblock %}
