--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -100,7 +100,7 @@
       })
       var listItems = ""
       results.forEach(function(result){
-        listItems = listItems + `<li><a href="/uploads/${result.url}">${result.title}</a></li>`
+        listItems = listItems + `<li><a href="${result.url}">${result.title}</a></li>`
       })
       searchResults.innerHTML = `
         <ul>
