--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -118,7 +118,7 @@
       <header>
       <h2>Search</h2>
       <button id="close-search" class="menu-button">
-        <img src="/images/logos/close.svg" alt="close search"/>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24px" height="24px" class="svg-icon"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
       </button>
       </header>
       <div class="search-inner">
