Added COVID-19 page, and fixed layout bugs with menus pushing onto narrow screens

--- a/src/_includes/page-header.njk
+++ b/src/_includes/page-header.njk
@@ -6,6 +6,7 @@
     <div>
       <a {% if r/\/about-us\//.test(page.url) %}class="active" {% endif %} href="/about-us/">About Us</a>
       <a {% if r/\/information\//.test(page.url) %}class="active" {% endif %} href="/information/">Information</a>
+      <a {% if r/\/covid-19-information\//.test(page.url) %}class="active" {% endif %} href="/covid-19-information/">COVID-19</a>
       <a {% if r/\/parents\//.test(page.url) %}class="active" {% endif %} href="/parents/">Parents</a>
       <a {% if r/\/contact-us\//.test(page.url) %}class="active" {% endif %} href="/contact-us/">Contact</a>
       <a {% if r/\/search\//.test(page.url) %}class="active" {% endif %} class="open-search" href="/search/">
@@ -36,6 +37,7 @@
       <a {% if page.url == "/" %}class="active" {% endif %} href="/">Home</a>
       <a {% if page.url == "/about-us/" %}class="active" {% endif %} href="/about-us/">About Us</a>
       <a {% if page.url == "/information/" %}class="active" {% endif %} href="/information/">Information</a>
+      <a {% if r/\/covid-19-information\//.test(page.url) %}class="active" {% endif %} href="/covid-19-information/">COVID-19</a>
       <a {% if page.url == "/parents/" %}class="active" {% endif %} href="/parents/">Parents</a>
       <a {% if page.url == "/contact-us/" %}class="active" {% endif %} href="/contact-us/">Contact</a>
     </div>
