updated governors list, added terms of reference, updated CMS config for terms of reference and minutes

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -152,6 +152,7 @@ main > figure {
 footer {
   background-color: white;
   border-top: 1px solid var(--font-color);
+  margin-top: 3em;
 }
 
 .footer-inner {
