added footer logos

--- a/src/_includes/homepage.njk
+++ b/src/_includes/homepage.njk
@@ -22,12 +22,10 @@
       <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
     <div class="footer-logos">
-      <div>Logo</div>
-      <div>Logo</div>
-      <div>Logo</div>
-      <div>Logo</div>
-      <div>Logo</div>
-      <div>Logo</div>
+      <img src="/images/logos/ofsted-good.png">
+      <img src="/images/logos/eco-schools-bronze.png">
+      <img src="/images/logos/industrial-cadets-bronze.png">
+      <img src="/images/logos/sainsburys-gold.png">
     </div>
   </main>
 {% endblock %}
