added dpscitt logo to homepage footer

--- a/src/_includes/homepage.njk
+++ b/src/_includes/homepage.njk
@@ -23,6 +23,7 @@
     </div>
     <div class="footer-logos">
       <img src="/images/logos/ofsted-good.png">
+      <img src="/images/logos/dpscitt-logo.png">
       <img src="/images/logos/eco-schools-bronze.png">
       <img src="/images/logos/industrial-cadets-bronze.png">
       <img src="/images/logos/sainsburys-gold.png">
