--- a/src/_includes/vacancies.njk
+++ b/src/_includes/vacancies.njk
@@ -4,12 +4,12 @@
 {% block pagecontent %}
 <main>
   <h1>{{title}}</h1>
-  {%if jobs.length > 0%}
+  {%if vacancies.length > 0%}
     <p>If you are interested in joinng our staff team, we are committed to safeguarding and encourage you to read our Child Protection and Safeguarding Policy before applying for any posts at Decoy Primary School.</p>
-    {%for job in jobs %}
-      <p>{{job.text}}</p>
+    {%for vacancy in vacancies %}
+      <p>{{vacancy.text}}</p>
       <div class="content-grid">
-      {% for document in job.documents %}<a href="{{document.path}}">{{document.name}}</a>{% endfor %}
+      {% for document in vacancy.documents %}<a href="{{document.path}}">{{document.name}}</a>{% endfor %}
       </div>
     {% endfor %}
   {% else %}
