--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -127,6 +127,13 @@ td {
   padding: var(--gutter) 0.7em;
 }
 
+blockquote {
+  background: whitesmoke;
+  margin: 0;
+  padding: 0.3em var(--gutter) 0.3em calc(var(--gutter) * 2);
+  border-left: 2px solid var(--highlight-color);
+}
+
 #map {
   width: 100%;
   box-shadow: var(--shadow-2);
