--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -616,6 +616,29 @@ input#query:focus {
   }
 }
 
+/* ---------------------- */
+/* banner images for main pages */
+.banner {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("/uploads/banner.jpg");
+  height: 300px;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.banner h1 {
+  color: white;
+  border: none;
+  position: absolute;
+  top: 100%;
+  max-width: var(--content-wide);
+  margin: -1.3em auto 0 auto;
+  padding: 0 var(--gutter);
+}
+
 /* --------------------- */
 /* home page styles */
 /* home page banner */
